[tool.poetry]
name = "dino"
version = "0.1.0"
description = ""
authors = ["nara-ryoya <nara_ryoya@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {path = "./.torch_wheels/torch-2.0.0+cu118-cp310-cp310-linux_x86_64.whl"}
torchvision = {path = "./.torch_wheels/torchvision-0.15.1+cu118-cp310-cp310-linux_x86_64.whl"}
torchaudio = {path = "./.torch_wheels/torchaudio-2.0.1+cu118-cp310-cp310-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
